@@ -1,3 +1,8 @@
+2014-10-08  c.hetherington  <cth@carlh.net>
+
+	* Make server finding more reliable when
+	there are more than a few servers.
+
 2014-10-08  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.74.2 released.
